--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,12 +6,18 @@ on:
     branches: [master]
 jobs:
   build:
+    env:
+      CI: true
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js version 18
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - name: Use Node.js version ${{matrix.node-version}}
+        uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: ${{matrix.node-version}}
       - run: npm i
       - run: npm run build --prefix client
+      - run: npm test
