--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -11,7 +11,7 @@ jobs:
       MONGO_URL: mongodb://localhost/nasa
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x]
         mongodb-version: ["5.0"]
     runs-on: ubuntu-latest
     steps:
@@ -23,7 +23,7 @@ jobs:
       - name: Use mongoDB from GitHub actions
         uses: supercharge/mongodb-github-action@1.9.0
         with:
-          node-version: ${{matrix.mongodb-version}}
+          mongodb-version: ${{matrix.mongodb-version}}
       - run: npm i
       - run: npm run build --prefix client
       - run: npm test
