--- a/package.json
+++ b/package.json
@@ -16,10 +16,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.3.4",
-    "mongoose": "^7.0.2",
-    "morgan": "^1.10.0"
-  }
+  "license": "ISC"
 }
