--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,13 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "cors": "^2.8.5",
     "csv-parse": "^5.3.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
     "pm2": "^5.2.2"
   },
   "devDependencies": {
